// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav bar component should render nav bar correctly 1`] = `
<div>
  <Navbar
    className="p-3 nav-bar"
    dark={true}
    expand="md"
    tag="nav"
  >
    <NavbarBrand
      tag="a"
    >
      <Link
        className="nav-title"
        to="/"
      >
        Questioner
      </Link>
    </NavbarBrand>
    <NavbarToggler
      className="toggle"
      onClick={[Function]}
      tag="button"
      type="button"
    />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <Link
            className="nav-link"
            to="/dashboard"
          >
            Dashboard
          </Link>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            color="secondary"
            nav={true}
          >
            Options
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              Your profile
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              tag="button"
              toggle={true}
            >
              Sign Out
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
    </Collapse>
  </Navbar>
</div>
`;

exports[`Nav bar component should render nav bar correctly 2`] = `
<div>
  <Navbar
    className="p-3 nav-bar"
    dark={true}
    expand="md"
    tag="nav"
  >
    <NavbarBrand
      tag="a"
    >
      <Link
        className="nav-title"
        to="/"
      >
        Questioner
      </Link>
    </NavbarBrand>
    <NavbarToggler
      className="toggle"
      onClick={[Function]}
      tag="button"
      type="button"
    />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={true}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <Link
            className="nav-link"
            to="/dashboard"
          >
            Dashboard
          </Link>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            color="secondary"
            nav={true}
          >
            Options
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              Your profile
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              tag="button"
              toggle={true}
            >
              Sign Out
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
    </Collapse>
  </Navbar>
</div>
`;
